2009-12-18  Francois Suter  <francois@typo3.org>

	* Fixed bug #12955: Missing -R option in chmod command in INSTALL.txt (thanks to Patrick Nussbaumer)

2009-12-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13015: Available languages are ordered by name in english and not in selected language (thanks to Georg Ringer)
	* Fixed bug #13003: Move back methods belonging to t3lib_sqlparser

2009-12-12  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13021: Mistyping prevents the CSV-export of the _PATH_field in List-View (thanks to Mathias Gisch)

2009-12-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12782: htmlArea RTE: Editing a link title or target with Firefox 3 sometimes simply unlinks the link

2009-12-11  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12897: Cannot parse SQL hints

2009-12-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13004: htmlArea RTE: buttons.table.disableEnterParagraphs not honoured in Opera
	* Fixed bug #13007: htmlArea RTE: Toggling insertlist buttons may freeze Safari/Chrome browsers
	* Fixed bug #13008: htmlArea RTE: Ending a list may produce invalid xhtml in Safari/Chrome

2009-12-10  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12959: cHashParams in index_phash is too small

2009-12-10  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12072: Permanent login checkbox is not shown as expected

2009-12-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12682: Section links coming from RTE broken in FE

2009-12-07  Steffen Kamper  <info@sk-typo3.de>

	* Raised felogin version from 1.2.0 to 1.3.0
	* Fixed bug #10327: [felogin] redirect does not work

2009-12-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #12926: RTE floods BE Log with error messages from json_encode()

2009-12-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #12930: htmlArea: Resizable RTE area